# nos-labos2

./: CMakeLists.txt  poll_every_five_seconds.cpp  poll_indef.cpp  poll_input.cpp
lab2a/: CMakeLists.txt  poll_indef.cpp
zad1/: CMakeLists.txt  poll_every_five_seconds.cpp
zad2/: shofer.c
